fix: borders visiblitity

--- a/src/parts/note/note.module.scss
+++ b/src/parts/note/note.module.scss
@@ -4,6 +4,7 @@
     flex-grow: 1;
 
     border-left: 1px solid var(--borderColor);
+    border-right: 1px solid var(--borderColor);
 }
 
 .minified {
